public/stylesheets/ui/documents.css
#document_list {
  padding: 10px 10px 0px 15px;
  -webkit-transition: top 0.1s linear;
  z-index: 5;
}
  .open_toolbar #document_list, body.visualize #document_list {
    top: 42px;
  }
  body.paginated #document_list {
    bottom: 38px;
  }

.document {
  position: relative;
  overflow: hidden;
  border: 1px solid transparent;
  background: #fcfcfc;
}
  .document.is_selected {
    border-color: #eea;
    -moz-border-radius: 6px; -webkit-border-radius: 6px; border-radius: 6px;
  }
  .document.muted {
    border-color: transparent;
    background: transparent;
  }
  #document_list .document {
    min-height: 77px;
    padding: 5px 30px 5px 77px;
    margin-bottom: 15px;
  }
  img.doc {
    background: white;
    position: absolute;
    width: 60px; height: 75px;
    -webkit-box-shadow: 0 0px 4px #555; -moz-box-shadow: 0 0px 4px #555;
  }
  .document img.doc {
    left: 7px; top: 6px;
  }
    body.logged_in .document img.doc {
      cursor: pointer;
    }
  .document .title {
    display: block;
    color: #204055;
    font-size: 14px;
    line-height: 18px;
    font-weight: bold;
    overflow: hidden;
    height: 18px;
  }
    .document .view_document {
      cursor: pointer;
      float: left;
    }
    .document_tools {
      display: block;
      float: left;
      padding-left: 10px;
      opacity: 0.5; filter: alpha(opacity=50);
      -webkit-transition: opacity 0.2s linear;
    }
      .document:hover .document_tools {
        opacity: 1; filter: alpha(opacity=100);
      }
      .document_tools > div {
        float: left;
        margin-right: 7px;
      }
      .document_tools .icon.spinner {
        position: absolute;
        left: 29px;
        top: 50px;
      }
  .document .source {
    font: 11px/14px Arial;
    overflow: hidden;
    height: 14px;
    color: #808080;
    margin-bottom: 8px;
  }
    .document.pending_access .page_count {
      display: none;
    }
  .document .description {
    line-height: 16px;
    margin-top: 5px;
    height: 33px;
    overflow: hidden;
    color: #222;
  }
    .document .description b {
      font-size: 12px;
    }
    .document.error_access .description {
      font-style: italic;
      color: #844;
    }
  .document .show_notes {
    cursor: pointer;
  }
    .document:hover .show_notes {
      text-decoration: underline;
    }
    .document .show_notes .show,
    .document .show_notes .hide {
      display: none;
    }
      .document.no_notes:hover .show,
      .document.has_notes .hide {
        display: inline;
      }

/*------------------------------ ANNOTATIONS ---------------------------------*/
.document .notes {
  display: none;
  padding-bottom: 5px;
}
  .document.has_notes .notes {
    display: block;
  }
  .note {
    position: relative;
    margin: 20px 0 0 0;
    padding: 15px;
    font: 12px/16px Arial;
    color: #454545;
  }
    .note .edit, .note .display {
      display: none;
    }
      .note.display_visible .display,
      .note.edit_visible .edit {
        display: block;
      }
    .note .note_background {
      position: absolute;
      background: white;
      top: 0; left: 0; bottom: 0; right: 0;
      border: 5px solid #efd12d;
      -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;
      -webkit-box-shadow: 0 0px 15px #777; -moz-box-shadow: 0 0px 15px #777;
    }
      .note.private_access .note_background {
        border-color: #68d5ef;
      }
    .note .note_contents {
      position: relative;
      overflow: hidden;
    }
      .note .note_title {
        cursor: pointer;
        color: #204055;
        font-weight: bold;
        margin-bottom: 10px;
      }
      .note .note_title_edit {
        width: 300px;
        margin-bottom: 10px;
      }
      .note .page_number {
        cursor: pointer;
        font: bold 10px/12px Arial;
        color: black;
        float: right;
      }
      .note .note_text_edit_wrap {
        position: relative;
        margin-right: 10px;
      }
        .note .note_text_edit {
          height: 100px;
          width: 100%;
          font: 12px Arial;
        }
      .note .note_excerpt_wrap {
        border: 1px solid #d0d0d0;
        text-align: center;
        margin-bottom: 10px;
      }
        .note .note_excerpt {
          position: relative;
          margin: 0 auto;
          width: 750px;
          overflow: hidden;
        }
          .note .left_cover,
          .note .right_cover {
            position: absolute;
            z-index: 5;
            background: white;
            opacity: 0.68;
            filter: alpha(opacity=68);
          }
            .note .left_cover {
              left: 0;
            }
            .note .right_cover {
              right: 0;
            }
          .note .note_image {
            left: 0;
            position: absolute;
          }
      .note .note_controls.display {
        font-size: 11px;
        opacity: 0;
        -webkit-transition: opacity 0.2s linear;
        float: right;
        line-height: 12px;
        margin-right: 10px;
      }
        .note:hover .note_controls.display {
          opacity: 1;
        }
      .note .note_controls button {
        margin: 10px 0 0 0;
      }
        .note .note_controls .cancel_note {
          margin-right: 10px;
        }

